--- 14-Apr-2011, version 1.8-13
Added new functions Moran (global) and MoranLocal

--- 11-Apr-2011, version 1.8-12
Major bug fix in focalFilter. In previous versoins results were wrong for filters larger than 3x3 !
Thanks to Nick Hamm & Andy Wilson for reporting

--- 7-Apr-2011, version 1.8-10
Bug fix in cellStats with 'sd' and large files (reported by John Donoghue)

--- 26-Mar-2011, version 1.8-9
Major bug fix in gridDistance with some large rasters that cannot be processed in memory (reported by Kevin Ummel)

--- 25-Mar-2011, version 1.8-8
Bug fix in crop with RasterStack introduced in version 1.7-48 to keep the colortable when doing crop (reported by Kevin Ummel)

--- 24-Mar-2011, version 1.8-7
Fixed error in asFactor

--- 20-Mar-2011, version 1.8-6
added "alpha" (transparancy) argument to plot

--- 18-Mar-2011, version 1.8-5
new function 'hillshade'
new cellvalues argument to extract with lines

--- 13-Mar-2011, version 1.8-2
new function 'slopeAspect' that computes slope and/or aspect
non-exported classes prefixed with a '.' (to pass check in R 2.13.0)

--- 10-Mar-2011, version 1.8-1
Fixed error that occured in extract (.polygonValues) when a polygon smaller than the cell size and weights=T (reported by Xin Lin)

--- 9-Mar-2011, version 1.8-0
new function 'stackSelect' to select cell values from a single layer of a stack, using a RasterLayer to provide the indices.
bug fix in cross-tab for large files

--- 28-Feb-2011,  version 1.7-48
colortable no longer lost after using 'crop' (reported by Don MacQueen)

--- 26-Feb-2011,  version 1.7-46
Improvments to projectRaster based on comments by George Riner

--- 22-Feb-2011,  version 1.7-43
resample no longer looses layer names (reported by Brian Anacker)

--- 21-Feb-2011,  version 1.7-42
A number of buglets fixed. Thanks to Jon Olav Skoien, Kevin Ummel & Matteo Mattiuzzi

--- 4-Feb-2011,  version 1.7-35